Renamed emailnotification feature to "email" Fixed a bug in notifications when there were multiple recipients Simplified the default email template that is used if no template has been defined Changed a logging level line in bungeni.alchemist.type_info from error to debug as it's not really an error and it's too noisy Granted view permissions to Owner in the user workflow Fixed CSS issue on the context_actions menu that resulted in the menu being misaligned

--- a/bungeni.main/trunk/bungeni/portal/static/html/resources/rtl.css
+++ b/bungeni.main/trunk/bungeni/portal/static/html/resources/rtl.css
@@ -41,6 +41,7 @@ div#portal-globalnav ul.level0 ul.level1 li {
 .contentActions li.context_actions,
 .contentActions li.context_actions li {
    float: right !important;
+   position:absolute;
 }
 
 dl#context_actions.actionMenu .actionMenuContent ul li a#view,
